--- a/2-1-21.md
+++ b/2-1-21.md
@@ -1,2 +1,3 @@
+### February 1st, 2021 | Lecture 1
 First day of class! Good to see everyone in the class (quite a few familiar faces), hear about Prof. Pollard's work, review the class logistics, and watch some cool videos from recent graphics research.
 I particularly liked the RigNet paper, the homogenized yarn deformation paper, and the snow simluation paper. I will go read these papers in my own time and consider doing them for the first Assignment.
