--- a/2-8-21.md
+++ b/2-8-21.md
@@ -1,2 +1,2 @@
 ### February 8th, 2021 | Lecture 3
-text
+The Panoptic Studio seemed very interesting and I hope I can visit it on campus sometime. I liked seeing the file format for a skeleton/asf file and was suprrised at how readable it was. I thought they would be encoded in some way that would optimize computation, though we then went over the file formats that had more binary and matrixlike formatting. It was also interesting to see how dense the information for motion capture was at 240 frames per second, compared to traditional animation and video where things are typically much lower, like 24 or 30 fps, and storing keyframe animation could require even less data. It was nice to see where I could access motion capture data online. I also thought it was cool how they could transition between different kinds of motions by finding similar poses. I had not thought about how that could be done automatically, and it seems like in games I have played the game tends to complete a motion before transitioning to a second motion. Maybe this is because most poses tend to start and end in a rest position so this is the common pose. The paper with the basketball motion was interesting, I wonder if they are able to accurately determine the phases with unsupervised learning and it is interesting that they take the objects and environment into account, as this would obviously influence the action of the characters in many situations. The squash and stretch filter was cool in how simple it was, agree that it would work better on a stylized character or object, having a realistic human squash and stretch puts it in uncanny valley. 
