--- a/2-10-21.md
+++ b/2-10-21.md
@@ -1,1 +1,3 @@
+### February 10th, 2021 | Lecture 4
+We went over IK today and while we did briefly use the Jacobian Transpose to implement IK in 15-462, it was nice to go into more depth about IK and the different methods used to solve IK. The resources mentioned in lecture will be helpful for doing mini project 1. I also enjoyed seeing what papers people will be presenting and the potential options for mini project 1.
 
