--- a/2-22-21.md
+++ b/2-22-21.md
@@ -1,2 +1,27 @@
 ### February 22nd, 2021 | Lecture 5
-text
+I arrived a little late to lecture today from my previous class running over,
+but I did get to hear a few people's project ideas which was nice. I am planning
+on comparing keyframing with mocap animation.
+
+It was interesting to get a closer look at RigNet today. I agree that the skeleton structure
+was a bit unconventional with the shoulder bones offset from a more central joint,
+ but if they provided the data themselves maybe this is
+intentional and leads to the improvement over existing methods? 
+
+The skinning was impressive in how it was able to 
+differentiate between many layers and weight separate flowing sections of fabric.
+I liked that this paper emphasized that it was designed for
+practical use in real time applications.
+It seems like research methods are usually implemented in external programs separately
+after the paper has been published, so it was cool that they mentioned
+it is already in use in game engines.
+
+Neural networks are clearly very powerful in graphics and animation. I am curious about the
+process of designing these neural networks, i.e. how do they decide how to 
+construct them/what transforms and units to include,
+ and how do they preprocess the data.
+
+It was nice to go over quaternions and dual quaternions to solidify my understanding of them,
+and take a brief look at cage skinning as well.
+
+
