--- a/2-17-21.md
+++ b/2-17-21.md
@@ -1,6 +1,8 @@
 ### February 17th, 2021 | Lecture 4
-FABRIK
-The line of action paper was very interesting and as someone who enjoys drawing comic-styled traditional art I can see how this would be helfpul in quickly creating dynamic poses.
-Gesture drawing posing . I thought it was interesting how they could parse the joints and body parts using the curvature of the stroke, I have never thought about that before.
+I liked seeing all the different papers on damped least squares IK and how they optimized it for various parameters.
+The FABRIK paper was very interesting in how it was based on the joint positions and not the joint angles. I can see how it would be an improvement over standard CCD methods in speed and preserving the pose.
+I thought the mesh-based IK paper was cool and it was impressive how they managed to make natural poses without a skeleton and were able to place control points seemingly arbitrarily on the mesh.
+The line of action paper was very interesting and as someone who enjoys drawing comic-styled traditional art, I can see how this would be helfpul in quickly creating dynamic poses.
+As for gesture drawing posing, I thought it was interesting how they could parse the joints and body parts using the curvature of the stroke. That observation seems very accurate even though people do not usually think about it.
 Also I noticed that all the gesture drawings were of the same model that was eventually posed, I wonder if they could pose using a gesture drawing that was not model-accurate.
 Maybe not because they are determining the joints from the silhouette of the drawing.
