--- a/2-24-21.md
+++ b/2-24-21.md
@@ -1,49 +1,13 @@
 ### February 24th, 2021 | Lecture 6
-vaishnavi - hand motion
-do not track wrinkles, creases, bulges. this paper tracks self contact + occlusion
-that is interesting. I had never thought about tracking the object details of the hand.
-3D scan a surface mesh, create volumetric tetrahedral mesh -> used to represent deformable body and make sure morphing makes sense
-motion sequences deform this original mesh
+It was nice to hear people present about some new papers today.
 
-minimize energy equation at each frame
-	vision, physics/elasticity, linking
-the collisions between the contours and the hands looks really believable and theres no clipping or strange deformations of the flesh
-i hadnt really realied that hands are very fleshy and soft actually
-agree that it could be further optimized for speed but it does have to keep track of many physics variables along the mesh to create realistic defomration
-deforms previous frames mesh so prone to drift
+Vashnavi presented a paper about tracking hand motion, with a focus on self contact and occulusion created by the creases and bulges of the hand. This is quite interesting because now that I think about it, most major hand motion research does not seem to take this into account. Hands are really very fleshy and there are some interesting properties and characteristics that can be observed from the results of this paper. I agree that the speed of this method could be further optimized, but they do have to keep track of many physics properties at every frame and if a frame is miscalculated, this could cause drift, so it will definitely be difficult to optimize for speed while maintaining the realistic properties.
 
-anna stop motion face anim
-i liked the animation in kubo and the 3 strings so this is very interesting to see how they produce them
-and it would definitely be good to optimize the expense of creating 3d models for stop motion
-generates different libraries for top and bottom of face which is interesting how they apply deformation between these parts
-impressive how many frames captured with just 2 libraries
-makes sense that number of frames doesnt scale linearly, to increase number of frames need fewer addl libraries because its a combination between the different libraries, and need the basic set of expressions to span basic expressions
-facial animation looks really good and believable, so this is good esp bc facial animation needs to be expressive and its easy to notice errors
+Then, Anna presented a paper on 3D stop motion facial animation. I enjoyed the animation in Kubo and the Two Strings so it was very interesting to see how they produce modern stop motion animation. It seems like it would definitely be tedious and expensive to create so many 3D models. I wonder why they decided to split the face into the top and bottom as opposed to some other division. It was impressive how many frames they were able to capture with just 2 libraries and applying deformations between the two parts of the face. I think it makes sense that the number of frames doesnt scale linearly, because the output is a combination of parts in the different libraries (so maybe a n^2 factor?). It also takes fewer libraries to increase the number of frames at a certain point probably because it takes many diverse parts to span basic expressions, and from there, it is easier to add more subtle changes. Overall, I thought the facial animation looked really good and believable, which was impressive because of how expressive facial animation needs to be and how easily we can perceive errors in facial motion.
 
-nikolas
-pinocchio easily rig and animate mesh
-step 1. approximate medial surface - interior points where equidistant to surface of mesh
-step 2. make packed spheres from last step
-step 3. make graph of armature
-step 4. embed, and then make it more regular looking
-step 5. bind mesh to armature by heat diffusion method
+Nikolas presented the classic Pinocchio paper for rigging and animating a mesh. It was nice to get a clear walkthrough of the process and it gave a good background on what things are built upon today.
 
-nathan
-motion synthesis for social conversations
-nice to see a paper from cmu
-create realistic dyadic (two individuals) conversations
-divide into sentence/a point made, listener response/brief response, hesitation
-i think these are good indicators and most speech can be divided into these categories
-how do they determine what kind of hand motion to make, must create variation in hand motion or we reach uncanny valley
-easy to see correlation between peaks in audio and peaks in movement
-do they associate kinds of movements with the audio emotion
-yeah noticed that many of the matched motions, while there was more motion during the emphasized parts or when people were speaking, and the motions themselves looked realistic, it didnt really match the emotion being expressed
-am wondering if it could be combined with existing research on audio and emotion and label what kinds of motions are what kinds of emotion
+Then, Nathan presented a paper on motion synthesis for social conversations. It was cool to see a presentation on a paper out of CMU. I think the indicators they chose to divide the speech into were good, though I do wish they had more correlation between the speech and the hand motions chosen. They did do a good job of matching the peaks of motion with the peaks in the audio. Overall, I noticed that many of the matched motions, while there was more motion during the emphasized parts or when people were speaking, and the motions themselves looked realistic, it didnt really match the emotion being expressed. I wonder if this could be combined with other research on audio and emotion to better categorize and associate character motion and emotion.
 
-alan
-skeleton aware motion retargeting
-motion retargeting - convert one skeletons motion to another skeleton while maintaining same motion
-current methods not good enough, doing manually also time consuming
-convert motion from complex skeleton to primal skeleton, then transfer to another skeleton
-results seem quite good, cool that can add to chars with different number of joints and bones and uneven skeleton
+Lastly, Alan presented on skeleton aware motion retargeting. I thought it was interesting how they could convert the motion from a variety of complex skeletons to a primal skeleton, and then to a different complex skeleton. The results seemed quite good and they adapted well to characters with different joint and bone structure and uneven skeletons.
 
