--- a/3-8-21.md
+++ b/3-8-21.md
@@ -1,4 +1,4 @@
 ### March 8th, 2021 | Lecture 9
 Today we went over the general ideas and process for particle simulation today. It was good to review the different integrator methods.
 It was also nice to go over the vectors and matrices used for rigid bodies, and it's nice to know that it's not too difficult to use quaternions for them.
-It was cool to cover a bit of the constraint methods and see some examples of projects. Thanks Arjun for covering the Mini Project 2 topics.
+It was cool to cover a bit of the constraint methods and see some examples of projects. Thanks Arjun for covering the Mini Project 2 topics. I am excited to start working on the next mini project and it looks like there are a lot of things to potentially explore.
