--- a/4-26-21.md
+++ b/4-26-21.md
@@ -4,4 +4,9 @@ It was nice to learn about hand animation, the area that Prof. Pollard specializ
 
 The hand simulation looked pretty convincing but the creases in the center of the hand made it look a bit uncanny. It's interesting to realize you can't touch move some fingers in a direction without also moving neighboring fingers. I wonder if this is a muscle limitation that can be modeled.
 
+It was interesting to see how they modeled the details of the bones and muscles in the hand using the MRI dataset.
+
+The SMPL blend-shape skinning was very interesting to see. The results looked lifelike.
+
+The Scanimate paper was less compelling in my opinion. I feel like clothes in real life have more flow and don't follow the body so closely.
 
