--- a/4-28-21.md
+++ b/4-28-21.md
@@ -1,1 +1,6 @@
 ### April 28th, 2021 | Lecture 23
+
+The first paper on dynamic legged locomotion was pretty interesting. I liked the video demo. If there were creatures with that many legs in real life, they moved as I would expect them to move.
+
+It makes sense to divide the movement into a state machine. 
+I am curious how they would anticipate ground contact, especially on potentially uneven topology. Or, it would have to be a very fast transition. 
