--- a/4-28-21.md
+++ b/4-28-21.md
@@ -4,3 +4,7 @@ The first paper on dynamic legged locomotion was pretty interesting. I liked the
 
 It makes sense to divide the movement into a state machine. 
 I am curious how they would anticipate ground contact, especially on potentially uneven topology. Or, it would have to be a very fast transition. 
+
+The Atlanta in Motion video looks quite good for its time. I wish the spine had more joints in it, I think that caused many of the stiff motions.
+
+It was cool to learn about how biped walking and character motion is generated from physical properties.
