--- a/5-3-21.md
+++ b/5-3-21.md
@@ -1,2 +1,3 @@
 ### May 3rd, 2021 | Lecture 24
 
+The pendulum model was fairly straightforward to understand, as well as placing the feet based on the position. I think the pendulum model causes the character to lean backwards more than the average person, especially when deccelerating. They seemed to deal with a wide variety of scenarios and inputs, which I suppose learning is really good at.
